# bakllava-rlhf

./: .gitignore  README.md  example.txt  pyproject.toml  requirements.txt
bakllava_rlhf/: idefics_2_for_sequence_classification.py  llava_for_sequence_classification.py  multi_modal_reward_trainer.py  preprocess_dataset.py  run_reward_bench.py  run_reward_bench.sh  train_reward_model.py  train_reward_model.sh
